--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ post==2018.11.20
 protobuf==3.6.1
 psycopg2==2.7.6.1
 public==2018.11.20
+pymongo==3.7.2
 pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
